--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
+    "eslint": "^8.43.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
